# multi-agent-system

./: .gitignore  README.md  crewai_flow.html  pyproject.toml
db/: chroma.sqlite3
src/vertical_labs/: __init__.py  __main__.py  app.py  flow.py  main.py  monitoring.py  orchestrator.py  storage.py  workflow.py
src/vertical_labs/config/: agents.yaml  tasks.yaml
src/vertical_labs/contentai/: agents.py  crew.py  tasks.py
src/vertical_labs/crews/content/: content_crew.py
src/vertical_labs/crews/content/config/: agents.yaml  tasks.yaml
src/vertical_labs/crews/pitch/: pitch_crew.py
src/vertical_labs/crews/pitch/config/: agents.yaml  tasks.yaml
src/vertical_labs/crews/topics/: topics_crew.py
src/vertical_labs/crews/topics/config/: agents.yaml  tasks.yaml
src/vertical_labs/pitchai/: agents.py  crew.py  tasks.py
src/vertical_labs/tools/: __init__.py  content_tools.py  news_tools.py  pitch_tools.py
src/vertical_labs/tools/custom/: apify.py  custom_tools.py  dataforseo.py  diffbot.py  google_flights.py  search_scraper.py
src/vertical_labs/topicsai/: agents.py  crew.py  tasks.py
tests/: test_integration.py
