[tool.poetry]
name = "vertical-labs"
version = "0.1.0"
description = "Multi-agentic system using CrewAI for Vertical Labs"
authors = ["OpenHands <openhands@all-hands.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.11.0"
crewai-tools = "^0.0.9"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"