[project]
name = "vertical-labs"
version = "0.1.0"
description = "Multi-agentic system using CrewAI for Vertical Labs"
authors = [
    { name = "OpenHands", email = "openhands@all-hands.dev" }
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "crewai[tools]>=0.83.0,<1.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
kickoff = "vertical_labs.main:kickoff"
plot = "vertical_labs.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"